# MCU_ArCaRa

./: .gitignore  .gitignore~  README.md  README.md~  install_OPENCV  install_ROS_indigo  install_dronekit  install_other_pkg  install_realsense  install_realsense~
NapoDrone_ws/: CAVO_RUN.sh  DEMO_RUN.sh  GPIO_CONFIG.sh  LOCALIZE.sh  NAV_RUN.sh  RUN_ALL_ROS_NODE.sh  RUN_ROSBAG.sh  TO DO POZYX  UWB_RUN.sh  iris.launch
NapoDrone_ws/backup_src_12-06-2018/src/BuzzerManager/: CMakeLists.txt  package.xml
NapoDrone_ws/backup_src_12-06-2018/src/BuzzerManager/src/: main.cpp
NapoDrone_ws/devel/: .catkin  .rosinstall  setup.sh
NapoDrone_ws/log/: EKF.txt  EKF_Giulia.txt  EKF_soloRange.txt  anchor_calib.txt  battery.txt  camera_pose.txt  control.txt  pos_1  pos_11.txt  pos_auothnfoweho.txt  pozyx.txt  pozyx_imu.txt  pozyx_magnetic.txt  pozyx_perssure.txt  pozyx_position.txt  pozyx_range.txt  range _11.txt  range_autop.txt  range_io_treno.txt  range_rs.txt  uwb_range.txt
NapoDrone_ws/log/10a/: pozyx_imu.txt  pozyx_magnetic.txt  pozyx_perssure.txt  pozyx_range.txt
NapoDrone_ws/log/10b/: pozyx_imu.txt  pozyx_magnetic.txt  pozyx_perssure.txt  pozyx_position.txt
NapoDrone_ws/log/2a/: pozyx_imu.txt  pozyx_magnetic.txt  pozyx_perssure.txt  pozyx_range.txt
NapoDrone_ws/log/2b/: pozyx_imu.txt  pozyx_magnetic.txt  pozyx_perssure.txt  pozyx_position.txt
NapoDrone_ws/log/30-04 1 pos/: pozyx_imu.txt  pozyx_magnetic.txt  pozyx_perssure.txt  pozyx_position.txt
NapoDrone_ws/log/30-04 pos 2/: pozyx_imu.txt  pozyx_magnetic.txt  (+2 more)
NapoDrone_ws/src/ArduinoSerial/: CMakeLists.txt  package.xml
NapoDrone_ws/src/ArduinoSerial/include/: arduino_serial.h
NapoDrone_ws/src/ArduinoSerial/launch/: ArduinoSerial.launch
NapoDrone_ws/src/ArduinoSerial/src/: arduino_serial_function.cpp  arduino_serial_node.cpp
NapoDrone_ws/src/AutopilotManager/: CMakeLists.txt  package.xml
NapoDrone_ws/src/AutopilotManager/data/: PID_iris.txt
NapoDrone_ws/src/AutopilotManager/include/: autopilot_manager_node.h
NapoDrone_ws/src/AutopilotManager/launch/: AutopilotManagerMavros.launch  AutopilotManagerMavros_cavo.launch  autopilot_Manager.launch  autopilot_Manager_PC.launch  autopilot_Manager_Sim.launch  autopilot_mavros.launch
NapoDrone_ws/src/AutopilotManager/src/: autopilot_manager_function.cpp  autopilot_manager_node.cpp
NapoDrone_ws/src/GripperManager/: CMakeLists.txt  package.xml
NapoDrone_ws/src/GripperManager/include/: gripper_manager.h
NapoDrone_ws/src/GripperManager/launch/: gripper.launch
NapoDrone_ws/src/GripperManager/src/: gripper_function.cpp  main.cpp
NapoDrone_ws/src/NavigationSystem/: CMakeLists.txt  package.xml
NapoDrone_ws/src/NavigationSystem/backup/: NavigationSystem.launch  listener.cpp
NapoDrone_ws/src/NavigationSystem/include/: navigation_system_node.h  uwb_system_node.h
NapoDrone_ws/src/NavigationSystem/launch/: NavigationSystem.launch  Tag1.launch  Tag2.launch  Tag3.launch  Tag4.launch  Tag5.launch  Tag6.launch  Tag7.launch  Tag8.launch  UWBSystem.launch
NapoDrone_ws/src/NavigationSystem/src/: listener_poz.cpp  navigation_system_function.cpp  navigation_system_node.cpp  uwb_system_function.cpp  uwb_system_node.cpp
NapoDrone_ws/src/Object3Detection/: CMakeLists.txt  package.xml
NapoDrone_ws/src/Object3Detection/include/: 3Dvision_node.h
NapoDrone_ws/src/Object3Detection/launch/: Intel_r200.launch
NapoDrone_ws/src/Object3Detection/src/: 3Dvision_function.cpp  3Dvision_node.cpp
NapoDrone_ws/src/ObjectDetection/: CMakeLists.txt  package.xml
NapoDrone_ws/src/ObjectDetection/include/: vision_function.h  vision_node.h
NapoDrone_ws/src/ObjectDetection/launch/: Camera_stream.launch  Intel_r200.launch  Intel_r200_debug.launch  debug_mode.launch  webcam.launch  webcam_test.launch
NapoDrone_ws/src/ObjectDetection/msg/: Features.msg
NapoDrone_ws/src/ObjectDetection/src/: CameraStream.cpp  vision_function.cpp  vision_node.cpp  vision_node_intel.cpp
NapoDrone_ws/src/PixhawkManager/: CMakeLists.txt  CMakeLists.txt~  package.xml~
NapoDrone_ws/src/PixhawkManager/data/: PID_iris.txt
NapoDrone_ws/src/PixhawkManager/include/: pix_manager_node.h
NapoDrone_ws/src/PixhawkManager/launch/: PIX_Manager.launch  PIX_Manager.launch~  PIX_Manager_PC.launch  PIX_Manager_Sim.launch  PIX_MavRoS_Manager.launch
NapoDrone_ws/src/PixhawkManager/src/: pix_manager_function.cpp  pix_manager_node.cpp
NapoDrone_ws/src/SerialManager/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
NapoDrone_ws/src/SerialManager/include/: serial_manager.h
NapoDrone_ws/src/SerialManager/launch/: SerialManager.launch  SerialManager.launch~  camera.launch
NapoDrone_ws/src/SerialManager/msg/: Param.msg~
NapoDrone_ws/src/SerialManager/src/: rs232.cpp  rs232_30-10.cpp  serial_manager_function.cpp  serial_manager_node.cpp
NapoDrone_ws/src/TrackingObject/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
NapoDrone_ws/src/UWBManager/: CMakeLists.txt  package.xml
NapoDrone_ws/src/UWBManager/include/: uwb_manager.h
NapoDrone_ws/src/UWBManager/launch/: UWBManager.launch
NapoDrone_ws/src/UWBManager/src/: uwb_manager_function.cpp  uwb_manager_node.cpp
NapoDrone_ws/src/UwbManager/: CMakeLists.txt  package.xml
NapoDrone_ws/src/UwbManager/include/: uwb_manager.h
NapoDrone_ws/src/UwbManager/launch/: UwbManager.launch
NapoDrone_ws/src/UwbManager/msg/: RangeUwb.msg
NapoDrone_ws/src/UwbManager/src/: uwb_manager_function.cpp  uwb_manager_node.cpp
backup_31-10-2017/: bash.txt
install_on_XU3/: install_OPENCV  install_other_pkg
log/: camera_pose.txt  camera_pose2.txt  camera_pose_valid.txt  control.txt  imu_data.txt  quota.txt
odroid_ws/devel/: .catkin  .rosinstall  setup.sh
odroid_ws/src/SaveImage/: CMakeLists.txt
odroid_ws/src/SaveImage/launch/: C270.launch  Intel_r200.launch  camera.launch  debug_mode.launch
odroid_ws/src/SaveImage/src/: CameraStream.cpp
script_dronekit/: Best_Practice.txt  Preliminary_Test.py  Test2.py~  Utility.py
script_dronekit/backup/: hello.py~  script_v0.py  script_v1.py  script_v2.py
script_dronekit/dronekit_Stefano/: hello.py
(+712 files in other folders)
